[gd_scene load_steps=10 format=2]

[ext_resource path="res://res/fonts/kingthings-petrock/Kingthings Petrock.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://res/imgs/old_sheet_1.jpg" type="Texture" id=2]
[ext_resource path="res://sheets/Objets_Speciaux.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 35
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 35
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 24
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 35
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 30
use_filter = true
font_data = ExtResource( 1 )

[node name="ObjetsSpeciaux" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.470588, 0.466667, 0.466667, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bt_Menu" type="Button" parent="."]
margin_left = 24.6132
margin_top = 24.6132
margin_right = 124.613
margin_bottom = 79.6132
rect_min_size = Vector2( 100, 55 )
custom_fonts/font = SubResource( 1 )
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bt_Annuler" type="Button" parent="."]
margin_left = 552.613
margin_top = 24.6132
margin_right = 652.613
margin_bottom = 79.6132
rect_min_size = Vector2( 100, 55 )
custom_fonts/font = SubResource( 1 )
text = "Annuler"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 94.0
margin_top = 187.0
margin_right = -52.0
margin_bottom = -62.0
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="ScrollContainer"]
margin_right = 508.0
margin_bottom = 872.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/CenterContainer"]
margin_right = 508.0
margin_bottom = 872.0
size_flags_horizontal = 3
custom_constants/separation = 50

[node name="ObjetsSpeciaux" type="VBoxContainer" parent="ScrollContainer/CenterContainer/VBoxContainer"]
margin_right = 508.0
margin_bottom = 442.0
custom_constants/separation = 25

[node name="TitreObjetsSpeciaux" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer/ObjetsSpeciaux"]
margin_right = 508.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 2 )
text = "Objets Spéciaux : "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VarsObjs" type="HBoxContainer" parent="ScrollContainer/CenterContainer/VBoxContainer/ObjetsSpeciaux"]
margin_top = 90.0
margin_right = 508.0
margin_bottom = 442.0
size_flags_horizontal = 3
custom_constants/separation = 50
alignment = 1

[node name="Descriptions" type="VBoxContainer" parent="ScrollContainer/CenterContainer/VBoxContainer/ObjetsSpeciaux/VarsObjs"]
margin_left = 29.0
margin_right = 229.0
margin_bottom = 352.0

[node name="TitreDescriptions" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer/ObjetsSpeciaux/VarsObjs/Descriptions"]
margin_right = 200.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 3 )
text = "Description :"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Descriptions" type="TextEdit" parent="ScrollContainer/CenterContainer/VBoxContainer/ObjetsSpeciaux/VarsObjs/Descriptions"]
margin_top = 52.0
margin_right = 200.0
margin_bottom = 352.0
rect_min_size = Vector2( 200, 300 )
custom_fonts/font = SubResource( 4 )
show_line_numbers = true

[node name="Effets" type="VBoxContainer" parent="ScrollContainer/CenterContainer/VBoxContainer/ObjetsSpeciaux/VarsObjs"]
margin_left = 279.0
margin_right = 479.0
margin_bottom = 352.0

[node name="TitreEffets" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer/ObjetsSpeciaux/VarsObjs/Effets"]
margin_right = 200.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 3 )
text = "Effets :"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Effets" type="TextEdit" parent="ScrollContainer/CenterContainer/VBoxContainer/ObjetsSpeciaux/VarsObjs/Effets"]
margin_top = 52.0
margin_right = 200.0
margin_bottom = 352.0
rect_min_size = Vector2( 200, 300 )
custom_fonts/font = SubResource( 4 )
show_line_numbers = true

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/CenterContainer/VBoxContainer"]
margin_top = 492.0
margin_right = 508.0
margin_bottom = 872.0
custom_constants/separation = 15

[node name="TitreArme" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer"]
margin_right = 508.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 2 )
text = "Arme Kaï :"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nom" type="HBoxContainer" parent="ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 508.0
margin_bottom = 128.0

[node name="TitreNom" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer/Nom"]
margin_right = 78.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 5 )
text = "Nom :"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NomArme" type="LineEdit" parent="ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer/Nom"]
margin_left = 82.0
margin_right = 508.0
margin_bottom = 48.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 6 )
max_length = 300
placeholder_text = "Nom de l'arme"

[node name="Type" type="HBoxContainer" parent="ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 143.0
margin_right = 508.0
margin_bottom = 191.0

[node name="TitreType" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer/Type"]
margin_right = 80.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 5 )
text = "Type :"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TypeArme" type="LineEdit" parent="ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer/Type"]
margin_left = 84.0
margin_right = 508.0
margin_bottom = 48.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 6 )
max_length = 300
placeholder_text = "Type de l'arme"

[node name="BonusHabilType" type="HBoxContainer" parent="ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 206.0
margin_right = 508.0
margin_bottom = 254.0

[node name="TitreBonusType" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer/BonusHabilType"]
margin_right = 204.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 5 )
text = "Bonus Habileté :"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BonusType" type="LineEdit" parent="ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer/BonusHabilType"]
margin_left = 208.0
margin_right = 508.0
margin_bottom = 48.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 6 )
max_length = 300
placeholder_text = "Bonus du au type de l'arme"

[node name="Propriete" type="HBoxContainer" parent="ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 269.0
margin_right = 508.0
margin_bottom = 317.0

[node name="TitrePropriete" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer/Propriete"]
margin_right = 136.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 5 )
text = "Propriété :"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProprieteArme" type="LineEdit" parent="ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer/Propriete"]
margin_left = 140.0
margin_right = 508.0
margin_bottom = 48.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 6 )
max_length = 300
placeholder_text = "Propriété de l'arme"

[node name="BonusHabilProp" type="HBoxContainer" parent="ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 332.0
margin_right = 508.0
margin_bottom = 380.0

[node name="TitreBonusProp" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer/BonusHabilProp"]
margin_right = 204.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 5 )
text = "Bonus Habileté :"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BonusProp" type="LineEdit" parent="ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer/BonusHabilProp"]
margin_left = 208.0
margin_right = 508.0
margin_bottom = 48.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 6 )
max_length = 300
placeholder_text = "Bonus du à la propriété de l'arme"
[connection signal="pressed" from="Bt_Menu" to="." method="_on_Bt_Menu_pressed"]
[connection signal="pressed" from="Bt_Annuler" to="." method="_on_Bt_Annuler_pressed"]
